--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0",
     "uuid": "^9.0.1",
+    "zustand": "^4.5.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
