--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vercel/analytics": "^1.5.0",
     "next": "15.4.6",
     "openai": "^4.55.0",
+    "plotly.js-dist-min": "^2.35.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-markdown": "^9.0.1",
